# voleeo-api

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cliff.toml  deny.toml  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
crates-tauri/voleeo-mac-window/: Cargo.toml
crates/voleeo-cookies/: Cargo.toml
crates/voleeo-cookies/src/: crypto.rs  lib.rs  matching.rs  model.rs  resolve.rs
crates/voleeo-core/: Cargo.toml
crates/voleeo-core/src/: cookies.rs  (+5 more)
crates/voleeo-crypto/: Cargo.toml
crates/voleeo-crypto/src/: cipher.rs  keys.rs  lib.rs
crates/voleeo-git/: Cargo.toml
crates/voleeo-http/: Cargo.toml
crates/voleeo-mcp/: Cargo.toml
crates/voleeo-storage/: Cargo.toml
crates/voleeo-ws/: Cargo.toml
crates/voleeo-ws/src/: lib.rs
plugins/ask/: package.json
plugins/base64/: package.json
plugins/curl/: package.json
plugins/encrypt/: package.json
plugins/faker/: package.json
plugins/fetch/: package.json
plugins/httpie/: package.json
plugins/themes/: package.json
plugins/timestamp/: package.json
plugins/url/: package.json
plugins/uuid/: package.json
scripts/: build-sidecar.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  mcp_server.rs  secret_store.rs  state.rs
src-web/: biome.json  components.json  index.html  package.json  vite.config.ts
src-web/src/: App.tsx  main.tsx
(+426 files in other folders)
