[package]
name = "voleeo-cookies"
version = "0.1.0"
license.workspace = true
repository.workspace = true
edition = "2024"

[dependencies]
serde = { workspace = true }
specta = { workspace = true }
chrono = { workspace = true }
url = "2"
cookie = "0.18"
voleeo-core = { path = "../voleeo-core" }
voleeo-crypto = { path = "../voleeo-crypto" }

[dev-dependencies]
serde_yaml = { workspace = true }
