[package]
name = "voleeo-crypto"
version = "0.1.0"
license.workspace = true
repository.workspace = true
edition = "2021"

[dependencies]
voleeo-core = { path = "../voleeo-core" }
aes-gcm = { workspace = true }
keyring-core = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = "3"
